@@ -933,6 +933,115 @@ RuleCallContext::$supportedActions[] = Array(
     'args' => Array( 'objName' => Array( 'type' => 'string', 'default' => '*nodefault*' ) ),
 );
 RuleCallContext::$supportedActions[] = Array(
+    'name' => 'src-Remove-Objects-Matching-Filter',
+    'MainFunction' => function(RuleCallContext $context)
+    {
+        $rule = $context->object;
+
+        if( $rule->source->count() < 1 )
+            return;
+
+        $queryName = $context->arguments['filterName'];
+
+        if( !isset($context->nestedQueries[$queryName]) )
+        {
+            derr("cannot find query filter called '{$queryName}'");
+        }
+
+        $rQuery = new RQuery('address');
+        $errorMessage = '';
+        if( !$rQuery->parseFromString($context->nestedQueries[$queryName], $errorMessage) )
+            derr("error while parsing query: {$context->nestedQueries[$queryName]}");
+
+
+        foreach( $rule->source->members() as $member )
+        {
+            if( $rQuery->matchSingleObject($member) )
+            {
+                echo $context->padding."  - removing object '{$member->name()}'... ";
+                if( $context->isAPI )
+                    $rule->source->API_remove($member, true);
+                else
+                    $rule->source->remove($member, true);
+                echo "OK\n";
+            }
+        }
+
+        if( $rule->source->count() < 1 )
+        {
+            echo $context->padding." * no objects remaining so the Rule will be disabled...";
+            if( $context->isAPI )
+                $rule->API_setDisabled(true);
+            else
+                $rule->setDisabled(true);
+            echo "OK\n";
+        }
+
+
+
+    },
+    'args' => Array(    'filterName' => Array( 'type' => 'string', 'default' => '*nodefault*',
+                                                'help' => 'specify the query that will be used to filter the objects to be removed' ),
+    ),
+    'help' => "this action will go through all objects and see if they match the query you input and then remove them if it's the case."
+);
+RuleCallContext::$supportedActions[] = Array(
+    'name' => 'dst-Remove-Objects-Matching-Filter',
+    'MainFunction' => function(RuleCallContext $context)
+    {
+        $rule = $context->object;
+
+        if( $rule->destination->count() < 1 )
+            return;
+
+        $queryName = $context->arguments['filterName'];
+
+        if( !isset($context->nestedQueries[$queryName]) )
+        {
+            derr("cannot find query filter called '{$queryName}'");
+        }
+
+        $rQuery = new RQuery('address');
+        $errorMessage = '';
+        if( !$rQuery->parseFromString($context->nestedQueries[$queryName], $errorMessage) )
+            derr("error while parsing query: {$context->nestedQueries[$queryName]}");
+
+
+        foreach( $rule->destination->members() as $member )
+        {
+            if( $rQuery->matchSingleObject($member) )
+            {
+                echo $context->padding."  - removing object '{$member->name()}'... ";
+                if( $context->isAPI )
+                    $rule->destination->API_remove($member, true);
+                else
+                    $rule->destination->remove($member, true);
+                echo "OK\n";
+            }
+        }
+
+        if( $rule->destination->count() < 1 )
+        {
+            echo $context->padding." * no objects remaining so the Rule will be disabled...";
+            if( $context->isAPI )
+                $rule->API_setDisabled(true);
+            else
+                $rule->setDisabled(true);
+            echo "OK\n";
+        }
+
+
+
+    },
+    'args' => Array(    'filterName' => Array( 'type' => 'string', 'default' => '*nodefault*',
+        'help' => 'specify the query that will be used to filter the objects to be removed' ),
+    ),
+    'help' => "this action will go through all objects and see if they match the query you input and then remove them if it's the case."
+);
+
+
+
+RuleCallContext::$supportedActions[] = Array(
     'name' => 'src-Remove-Force-Any',
     'section' => 'address',
     'MainFunction' => function(RuleCallContext $context)
